# collection-data-of-Novatel_GNSS-and-usb_camera

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
catkin_ws/devel/include/novatel_gps_msgs/: NovatelPsrdop2.h  NovatelPsrdop2System.h
catkin_ws/devel/lib/gps_receiver/: gps_receiver
catkin_ws/devel/lib/my_sync_package/: sync_image_gps_node
catkin_ws/devel/lib/novatel_gps_driver/: novatel_gps_node
catkin_ws/devel/lib/pkgconfig/: gps_receiver.pc  my_sync_package.pc  novatel_gps_driver.pc  novatel_gps_msgs.pc  ros_opencv.pc  sync_topics.pc  sync_topics_package.pc
catkin_ws/devel/lib/ros_opencv/: ros_opencv
catkin_ws/devel/lib/sync_topics/: sync_topics_node
catkin_ws/devel/share/gps_receiver/cmake/: gps_receiverConfig.cmake
catkin_ws/devel/share/my_sync_package/cmake/: my_sync_packageConfig.cmake
catkin_ws/devel/share/novatel_gps_driver/cmake/: novatel_gps_driverConfig.cmake
catkin_ws/devel/share/novatel_gps_msgs/cmake/: novatel_gps_msgs-msg-extras.cmake  novatel_gps_msgs-msg-paths.cmake  novatel_gps_msgsConfig.cmake
catkin_ws/devel/share/ros_opencv/cmake/: ros_opencvConfig.cmake
catkin_ws/devel/share/roseus/ros/novatel_gps_msgs/: manifest.l
catkin_ws/devel/share/sync_topics/cmake/: sync_topicsConfig.cmake
catkin_ws/devel/share/sync_topics_package/cmake/: sync_topics_packageConfig.cmake
catkin_ws/src/my_sync_package/: CMakeLists.txt
catkin_ws/src/my_sync_package/launch/: sync_image_gps.launch
catkin_ws/src/my_sync_package/src/: sync_image_gps_node (copy).cpp  sync_image_gps_node.cpp
(+11 files in other folders)
